# neptun

./: .coverage  .dockerignore  .env.example  .gitignore  .htaccess  .renderignore  .ruffignore  ADMIN_API_INTEGRATION.md  ADSENSE_COMPLIANCE.md  ADSENSE_SETUP.md  ARCHITECTURE.md  AUTO_UPDATE_SYSTEM.md  BANDWIDTH_CRISIS_OPTIMIZATION.md  BANDWIDTH_OPTIMIZATION_REPORT.md  BLACKOUT_API_INTEGRATION.md  BROWSER_AUTOMATION_GUIDE.md  CHANNEL_FORWARDER_README.md  CLOUDFLARE_SETUP.md  COMPETITIVE_SEO_STRATEGY.md  CREDENTIALS_UPDATED.txt  DEPLOY_SUCCESS.md  Dockerfile.new  EZOIC_CONTENT_UPDATE.md  FINAL_BANDWIDTH_REPORT.md  FINAL_CLEANUP_REPORT.md  FINAL_SOLUTION.md  FINAL_TELEGRAM_CONCLUSIONS.md  FIREBASE_SETUP.md  FIXES.md  FIX_NO_MARKERS.md  FLUTTER_MIGRATION.md  FORWARDER_SUMMARY.md  GITHUB_AUTO_DEPLOY.md  GMHOST_DEPLOY_GUIDE.md  GMHOST_FAQ.md  GMHOST_SETUP_GUIDE.md  GROQ_SETUP.md  IMPLEMENTATION_SUMMARY.md  MONOBANK_ACQUIRING_SETUP.md  Makefile  (+464 more)
.github/workflows/: tests.yml
android-app/: BUILD_INSTRUCTIONS.md  EMULATOR_RUNNING.md  GOOGLE_PLAY_CHECKLIST.md  PRIVACY_POLICY.md  QUICKSTART.md  README.md  build.gradle.kts  gradle.properties  keystore-instructions.md  local.properties  local.properties.example  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
api/: __init__.py  admin.py  alarms.py  chat.py  data.py  health.py  sse.py  tracks.py
app-ios/app-ios/: ContentView.swift  MapView.swift  MapViewModel.swift  Models.swift  NeptunAlarmMapApp.swift  NetworkService.swift  Package.swift
app-ios/app-ios.xcodeproj/: project.pbxproj
app-ios/app-ios.xcodeproj/project.xcworkspace/xcuserdata/vladimirmalik.xcuserdatad/: UserInterfaceState.xcuserstate
app-ios/app-iosTests/: app_iosTests.swift
app-ios/app-iosUITests/: app_iosUITests.swift  app_iosUITestsLaunchTests.swift
app-ios/neptunios/neptunios/: ContentView.swift  neptuniosApp.swift
app-ios/neptunios/neptunios.xcodeproj/: project.pbxproj
app-ios/neptunios/neptuniosTests/: neptuniosTests.swift
app-ios/neptunios/neptuniosUITests/: neptuniosUITests.swift  neptuniosUITestsLaunchTests.swift
core/: __init__.py  config.py  jwt_auth.py  message_store.py
core/api/: __init__.py  admin.py  alarms.py  blackout.py  chat.py  comments.py  routes.py
core/data/: __init__.py  regions.py
core/models/: __init__.py  threat.py
core/services/: __init__.py  geocoding.py  notifications.py  parser.py  storage.py  telegram.py
core/utils/: __init__.py  helpers.py
data/: __init__.py  geodata.py  ukraine_all_settlements.py
domain/: __init__.py  geo.py  models.py  threat_types.py
neptun_alarm_app/: README.md  flutter_launcher_icons.yaml  pubspec.yaml
neptun_alarm_app/android/: build.gradle.kts
neptun_alarm_app/android/app/: build.gradle.kts  google-services.json
neptun_alarm_app/android/app/src/main/: AndroidManifest.xml
neptun_alarm_app/ios/Runner/: GoogleService-Info.plist  Info.plist
neptun_alarm_app/ios/Runner.xcodeproj/: project.pbxproj
neptun_alarm_app/lib/: main.dart
neptun_alarm_app/lib/pages/: chat_page.dart  main_page.dart  native_map_page.dart  regions_page.dart  settings_page.dart  webview_page.dart
neptun_alarm_app/lib/services/: notification_service.dart
neptun_alarm_app/linux/: CMakeLists.txt
neptun_alarm_app/linux/runner/: my_application.cc
neptun_alarm_app/macos/Flutter/: GeneratedPluginRegistrant.swift
neptun_alarm_app/macos/Runner.xcodeproj/: project.pbxproj
neptun_alarm_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
neptun_alarm_app/macos/Runner/Configs/: AppInfo.xcconfig
neptun_alarm_app/web/: index.html  manifest.json
neptun_alarm_app/windows/: CMakeLists.txt
neptun_alarm_app/windows/runner/: Runner.rc  main.cpp
routes/: __init__.py  admin.py  alarms.py  analytics.py  blackout.py  chat.py  comments.py  config.py  devices.py  family.py  geocoding.py  messages.py  pages.py  payments.py  stream.py  telegram.py
services/: __init__.py
services/alarms/: __init__.py  client.py  monitor.py  state.py
services/chat/: __init__.py  moderator.py  store.py
services/geocoding/: __init__.py  base.py  cache.py  chain.py  local.py  normalizer.py  opencage.py  photon.py  smart.py
services/processing/: __init__.py  pipeline.py
services/realtime/: __init__.py
services/telegram/: __init__.py  fetcher.py  parser.py  patterns.py
services/tracks/: __init__.py  processor.py  store.py
static/: BingSiteAuth.xml  ads.txt  artillery.png.txt  avia.png.txt  city_boundaries.js  frontend_api_integration.js  manifest.json  pvo.png.txt  raketa.png.txt  robots.txt  shahed.png.txt  sitemap.xml  svg_markers.js  sw.js  test_polygon.geojson  test_single_raion.geojson  ukraine_oblasts.geojson  ukraine_raions_2020.geojson  ukraine_raions_2020.topojson  ukraine_raions_gadm.geojson
templates/: about.html  admin.html  admin_new.html  analytics.html  blackouts.html  contact.html  faq.html  index.html  index1.html  index_dev.html  index_index.html  index_map.html  index_new.html  index_old.html  maintenance.html  map_embed.html  map_only.html  map_only.html.backup  map_only_backup.html  privacy.html  redirect.html  redirect2.html  redirect3.html  region.html  safety.html  shahed_map.html  temp_js_check.js  terms.html
tests/: conftest.py  test_api.py  test_chat.py  test_geocoding.py  test_integration.py  test_message_store.py  test_region_course.py  test_region_header_course.py  test_telegram.py  test_tracks.py  test_utils.py
utils/: __init__.py  rate_limiter.py  threading.py
(+27 files in other folders)
