[project]
name = "neptun-ukraine"
version = "2.0.0"
description = "Ukraine Threat Monitoring System - Modular Architecture"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vladimir Malik"}
]
keywords = ["ukraine", "monitoring", "alerts", "geolocation", "flask"]

[project.urls]
homepage = "https://neptun.in.ua"
repository = "https://github.com/neptun-ukraine"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["services", "api", "utils", "domain"]
omit = ["tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]
show_missing = true
fail_under = 35

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
    | \.eggs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["services", "api", "utils", "domain"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "app.py",
    "app_backup*.py",
    "test_*.py",
    "*_test.py",
    "*_research*.py",
    "*_scraper*.py",
    "generate_*.py",
    "manual_*.py",
    "check_*.py",
    "quick_*.py",
    "schedule_*.py",
    "channel_*.py",
    "setup_*.py",
    "nominatim_*.py",
    "blackout_*.py",
    "api_protection.py",
    "monitor_*.py",
    "create_*.py",
    "ukraine_*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top of file
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E722",  # do not use bare except
    "E741",  # ambiguous variable name
    "B008",  # do not perform function calls in argument defaults
    "B017",  # do not assert blind exception
    "C901",  # too complex
    "F401",  # imported but unused
    "F403",  # star imports
    "F405",  # may be undefined from star import
    "F821",  # undefined name
    "F841",  # local variable assigned but never used
    "UP035", # deprecated typing imports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["B011", "B017"]
"app.py" = ["ALL"]
"app_backup*.py" = ["ALL"]
"*_test.py" = ["ALL"]
"test_*.py" = ["ALL"]
"*_research*.py" = ["ALL"]
"*_scraper*.py" = ["ALL"]
"generate_*.py" = ["ALL"]
"manual_*.py" = ["ALL"]
"check_*.py" = ["ALL"]
"quick_*.py" = ["ALL"]
"schedule_*.py" = ["ALL"]
"channel_*.py" = ["ALL"]
"setup_*.py" = ["ALL"]
"nominatim_*.py" = ["ALL"]
"blackout_*.py" = ["ALL"]
"api_protection.py" = ["ALL"]
"monitor_*.py" = ["ALL"]
"create_*.py" = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"test_sektor.py" = ["ALL"]
"test_trajectory_parser.py" = ["ALL"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ['\.venv', 'tests']
